; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/rtwn/usb/extr_rtwn_usb_reg.c_rtwn_usb_delay.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/rtwn/usb/extr_rtwn_usb_reg.c_rtwn_usb_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtwn_softc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rtwn_usb_delay(%struct.rtwn_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.rtwn_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.rtwn_softc* %0, %struct.rtwn_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp slt i32 %5, 1000
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @DELAY(i32 %8)
  br label %17

10:                                               ; preds = %2
  %11 = load %struct.rtwn_softc*, %struct.rtwn_softc** %3, align 8
  %12 = getelementptr inbounds %struct.rtwn_softc, %struct.rtwn_softc* %11, i32 0, i32 0
  %13 = load i32, i32* %4, align 4
  %14 = sdiv i32 %13, 1000
  %15 = call i32 @msecs_to_ticks(i32 %14)
  %16 = call i32 @usb_pause_mtx(i32* %12, i32 %15)
  br label %17

17:                                               ; preds = %10, %7
  ret void
}

declare dso_local i32 @DELAY(i32) #1

declare dso_local i32 @usb_pause_mtx(i32*, i32) #1

declare dso_local i32 @msecs_to_ticks(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
